objects/OF_CatalogoCommerciale__c.object
<CustomObject>
    <fields>
        <fullName>OF_Attivo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attivo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OF_DataFineValidita__c</fullName>
        <label>Data fine validità</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OF_DataInizioValidita__c</fullName>
        <label>Data inizio validità</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Catalogo commerciale</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Catalogo commerciale Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cataloghi commerciali</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>OF_ValiditaDataCatalogoCommerciale</fullName>
        <active>true</active>
        <errorConditionFormula>OF_DataFineValidita__c &lt; OF_DataInizioValidita__c</errorConditionFormula>
        <errorMessage>La data di fine validità non può essere minore della data di inizio validità</errorMessage>
    </validationRules>
</CustomObject>